Add sweet alerts, sourced in header images, reorganized some display

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "redux": "^4.0.5",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
     "cypress": "^13.3.1",
